[package]
name = "bm-starter-ns"
version = "0.1.0"
authors = ["Tron0xHEX <dm.fl.worker@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
winapi = { version = "0.3", features = [
    "winuser",
    "winbase",
    "consoleapi",
    "memoryapi",
    "handleapi",
    "processthreadsapi",
    "fileapi",
    "memoryapi",
    "synchapi"
] }
wchar = "0.6"

[lib]
name = "BmStarter"
crate-type = ["cdylib"]

[profile.dev]
panic = "abort"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"
